# bia-agent

./: .gitmodules  .pre-commit-config.yaml  README.md  pyproject.toml  rembi-metadata-template.yaml
.github/workflows/: test.yml
bia_agent/: biostudies.py  cli.py  files.py  gigaEM2pagetab.py  mifa2pagetab.py  rembi.py  rembi2pagetab.py  submission.py  transfer.py  utils.py
bia_agent/tests/: test_cli.py
dev/: pyproject.toml
examples/: mifa-metadata.json  mifa-metadata.yaml  rembi-metadata-with-mifa.yaml  rembi-metadata.json  rembi-metadata.yaml
examples/output/: mifa-metadata_rembi-mifa-to-pagetab.tsv  rembi-metadata-with-mifa_rembi-mifa-to-pagetab.json  rembi-metadata-with-mifa_rembi-mifa-to-pagetab.tsv  rembi-metadata_rembi-to-pagetab.json  rembi-metadata_rembi-to-pagetab.tsv
tests/: broken_specimens.yaml
yaml-templates/: mifa-metadata-template.yaml  rembi-metadata-template.yaml  rembi-mifa-metadata-template.yaml
