[tool.poetry]
name = "bia-agent"
version = "0.1.0"
description = ""
authors = ["Matthew Hartley <matthewh@ebi.ac.uk>"]
readme = "README.md"
packages = [{include = "bia_agent"}]

[tool.poetry.scripts]
bia-agent = "bia_agent.cli:app"

[tool.poetry.dependencies]
python = "^3.10"
bia-rembi-models = "^0.1.0"
ruamel-yaml = "^0.17.22"
typer = "^0.9.0"
requests = "^2.30.0"
fs = "^2.4.16"
pandas = "^2.0.1"
python-dotenv = "^1.0.0"
pytest = "^7.4.3"
bia_mifa_models = { git = "https://github.com/BioImage-Archive/bia-mifa-models.git", branch = "main"}
# bia-rembi-models = { git = "https://github.com/BioImage-Archive/bia-rembi-models.git", branch = "main" }


[tool.poetry.group.dev.dependencies]
pytest-cov = "^5.0.0"
black = "^24.4.2"
pyright = "^1.1.361"
pooch = "^1.8.1"
pre-commit = "^3.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
